# book-ingestion

./: .gitignore  .project.yml  CLAUDE.md  README.md  architecture.md  pyproject.toml
docs/: M2.1-design-brief.md
docs/superpowers/plans/: 2026-05-12-book-ingestion-m1.1.md  2026-05-12-book-ingestion-m1.md  2026-05-13-extract-metadata-m2.0.md  2026-05-14-m2.1-epub-ir.md
docs/superpowers/specs/: 2026-05-12-book-ingestion-design.md  2026-05-13-extract-metadata-design.md  2026-05-14-m2.1-epub-ir-design.md
src/book_ingestion/: __init__.py  api.py  cache.py  cli.py  detect.py  ir.py  metadata.py  page_labels.py
src/book_ingestion/backends/: __init__.py  base.py  epub_native.py  pdf_docling.py
src/book_ingestion/extractors/: __init__.py  _epub_common.py  base.py  epub.py  pdf.py
src/book_ingestion/projection/: __init__.py  epub_to_simple_view.py  to_simple_view.py
src/book_ingestion/quality/: flags.py  (+2 more)
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_detect.py  test_epub_backend_extract.py  test_epub_backend_survey.py  test_epub_chapters.py  test_epub_common.py  test_epub_projection.py  test_epub_real.py  test_format_symmetry.py  test_import_isolation.py  test_ir.py  test_metadata_api.py  test_metadata_edition.py  test_metadata_epub.py  test_metadata_isbn.py  test_metadata_model.py  test_metadata_pdf.py  test_metadata_real.py  test_page_labels.py  test_pdf_backend_extract.py  test_pdf_backend_survey.py  test_pdf_real.py  test_projection.py  test_quality.py  test_quality_flags.py  test_smoke.py  test_structure.py
tests/fixtures/: epub.py  pdf.py
(+3 files in other folders)
