[project]
name = "book-ingestion"
version = "0.1.0"
description = "Turn a book file into a JSON IR a downstream LLM workflow can consume"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Richard Lyon" }]
dependencies = [
    "docling>=2.93",
    "pydantic>=2.13",
    "typer>=0.12.5,<0.22.0",  # constrained by docling-slim[standard]==2.93.0
]

[project.optional-dependencies]
llm = ["anthropic>=0.101"]
dev = [
    "pytest>=9.0",
    "syrupy>=5.1",
    "ruff>=0.15",
    "mypy>=2.1",
    "reportlab>=4.5",
]

[project.scripts]
book-ingest = "book_ingestion.cli:app"

[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_ingestion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/book_ingestion"]

[tool.pyright]
# ReportLab has no published type stubs; suppress the resulting noise.
# mypy (our canonical type checker, scoped to src/) is unaffected.
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests that run real Docling (deselect with -m 'not slow')",
    "real_book: requires the real book in test/",
]
addopts = "-ra"
